# tape_sort_task

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  ConfigParser.cpp  ConfigParser.h  FileTape.cpp  FileTape.h  TapeInterface.h  TapeSorter.cpp  TapeSorter.h  main.cpp
tests/: CMakeLists.txt  FileTapeTest.cpp
